crates/codegraph-tools/tests/snapshots/snapshot_tools_list__tools_list_analyze_codebase.snap
---
source: crates/codegraph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"analyze_codebase\")"
---
{
  "name": "analyze_codebase",
  "description": "Index a codebase (C/C++, Rust, Go, Python) and build the code graph. Must be called before any query tools.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "force": {
        "default": null,
        "description": "Force full re-index, ignoring any cache (default false)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "path": {
        "description": "Absolute path to the directory to index",
        "type": "string"
      }
    },
    "required": [
      "path"
    ],
    "title": "AnalyzeCodebaseArgs",
    "type": "object"
  }
}
