crates/codegraph-tools/tests/snapshots/snapshot_tools_list__tools_list_generate_diagram.snap
---
source: crates/codegraph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"generate_diagram\")"
---
{
  "name": "generate_diagram",
  "description": "Generate a graph diagram: call graph (symbol), file dependencies (file), or inheritance tree (class). Returns edges as JSON by default, or Mermaid syntax when format=mermaid.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "class": {
        "default": null,
        "description": "Class name to center the inheritance diagram on",
        "type": [
          "string",
          "null"
        ]
      },
      "depth": {
        "default": null,
        "description": "BFS traversal depth (default 1)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "file": {
        "default": null,
        "description": "File path to center the dependency graph on",
        "type": [
          "string",
          "null"
        ]
      },
      "format": {
        "default": null,
        "description": "Output format: 'edges' (default, minimal JSON) or 'mermaid' (Mermaid flowchart syntax)",
        "type": [
          "string",
          "null"
        ]
      },
      "max_nodes": {
        "default": null,
        "description": "Maximum nodes in diagram (default 30)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "styled": {
        "default": null,
        "description": "When format=mermaid, add CSS styling and center node highlighting (default false)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "symbol": {
        "default": null,
        "description": "Symbol ID to center the call graph on (format: file:name)",
        "type": [
          "string",
          "null"
        ]
      }
    },
    "title": "GenerateDiagramArgs",
    "type": "object"
  }
}
