crates/codegraph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_callers.snap
---
source: crates/codegraph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_callers\")"
---
{
  "name": "get_callers",
  "description": "Find functions that call the given symbol (upstream call chain). Returns paginated results in the {results, total, offset, limit} envelope, sorted by (depth, symbol_id) ascending so the closest callers appear first. Default limit 100 (max 1000); raise `limit` (toward the 1000 cap) for hot symbols with high fan-in (e.g. UObject::Serialize), use `offset` to page through the remainder, or narrow the search by lowering `depth`.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "depth": {
        "default": null,
        "description": "Maximum traversal depth (default 1)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum callers to return per page (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N callers for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "symbol": {
        "description": "Symbol ID in format file:name",
        "type": "string"
      }
    },
    "required": [
      "symbol"
    ],
    "title": "GetCallersArgs",
    "type": "object"
  }
}
